tests/testcrate/tests/ui/insert_missing_fields.stderr
error: missing fields: field2, related_field
  --> $DIR/insert_missing_fields.rs:36:8
   |
36 | struct Table {
   |        ^^^^^
...
56 |     sql!(Table.insert(field1 = 42, i32_field = 91));
   |          ----------------------------------------- in this macro invocation

error: missing fields: i32_field, field2, related_field
  --> $DIR/insert_missing_fields.rs:36:8
   |
36 | struct Table {
   |        ^^^^^
...
59 |     sql!(Table.insert(field1 = 42, i32_fild = 91));
   |          ---------------------------------------- in this macro invocation

error: aborting due to 2 previous errors

